k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-api
  namespace: mlops
spec:
  replicas: 2

  selector:
    matchLabels:
      app: mlops-api

  template:
    metadata:
      labels:
        app: mlops-api

    spec:
      serviceAccountName: mlops-api-sa
      containers:
        - name: api
          #image: mlops-pipeline:latest
          image: ghcr.io/souhajomaa1412/mlops-pipeline:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: mlops-api
  namespace: mlops

spec:
  selector:
    app: mlops-api

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
