k8s/tls-selfsigned.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-api-ingress
  namespace: mlops
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mlops-api.local
      secretName: mlops-api-tls
  rules:
    - host: mlops-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-api
                port:
                  number: 80
